<resources>
    <string name="app_name">MY WALLET</string>

    <string name="authorization_login">Login</string>
    <string name="authorization_password">Password</string>
    <string name="authorization_login_button">log in</string>

    <string name="start_sign_up">Sign Up</string>
    <string name="start_log_in">Log In</string>
    <string name="start_continue_with_google">CONTINUE WITH GOOGLE</string>

    <string name="auth_name">Name</string>
    <string name="auth_email">Email</string>
    <string name="auth_password">Password</string>

</resources>