<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="ru.app.cheburechek.MainViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/activity_main_sueta_image"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:padding="@dimen/space_3"
            android:src="@drawable/sueta"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/activity_main_login_text_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_dimen"
            android:layout_margin="@dimen/space_3"
            android:hint="@string/authorization_login"
            android:text="@={vm.login}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_main_sueta_image"
            android:autofillHints="username" />

        <EditText
            android:id="@+id/activity_main_password_text_field"
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_text_dimen"
            android:layout_margin="@dimen/space_3"
            android:hint="@string/authorization_password"
            android:text="@={vm.password}"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_main_login_text_field"
            android:autofillHints="password" />

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/space_3"
            android:text="@string/authorization_login_button"
            android:onClick="@{() -> vm.onClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activity_main_password_text_field" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>